# Recognition-Finder-Pattern-QR-code

./: CMakeLists.txt  FinderPatternDetector.cpp  FinderPatternDetector.h  README.md  main.cpp
